--- a/HW1_S23_STUDENT.ipynb
+++ b/HW1_S23_STUDENT.ipynb
@@ -143,7 +143,15 @@
         "id": "GFkl_ExSWFv7"
       },
       "source": [
-        "<font size=+3>&#9998;</font> Write your proposed workflow here."
+        "<font size=+3>&#9998;</font>\n",
+        "\n",
+        "1) with git we can have several roles in a git team! one of them being guest, colobrator, etc.\n",
+        "\n",
+        "2) changes can be commmited creating a histroy tree that we can go back to and make changes\n",
+        "\n",
+        "3) commits will have descriptions about changes/added features and other items. One can also go furthen in the descriptors\n",
+        "\n",
+        "4) using meraging we can have a people working on different parts of the projects and then coomit their changes to the global code and in this case the global change will be added"
       ]
     },
     {
@@ -173,7 +181,10 @@
         "id": "oOFbq1cLZZWR"
       },
       "source": [
-        "<font size=+3>&#9998;</font> Write any text here."
+        "<font size=+3>&#9998;</font>\n",
+        "\n",
+        "1) STRANGER DANGER MODE: we can have them commit to a fork and after verifiting that this works we can have them create a merge request.\n",
+        "\n"
       ]
     },
     {
@@ -200,6 +211,15 @@
         "1. What challenges/bugs did you run into when testing your workflow? How might you design for them in the future?\n",
         "2. What worked well with your workflow?"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "94770IE-aBjs"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
