More changes up your way

--- a/HW1_S23_STUDENT.ipynb
+++ b/HW1_S23_STUDENT.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/amantham20/CMSE202-s23-turnin/blob/master/HW1_S23_STUDENT.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "oaGzBYqYZa9f"
       },
       "source": [
@@ -135,13 +145,13 @@
       "source": [
         "<font size=+3>&#9998;</font>\n",
         "\n",
-        "1) with git we can have several roles in a git team! one of them being guest, colobrator, etc.\n",
+        "1) with git we can have several roles in a github team! one of them being guest, colobrator, etc. we can sub divide the tasks then accordingly\n",
         "\n",
-        "2) changes can be commmited creating a histroy tree that we can go back to and make changes\n",
+        "2) changes can be commmited creating a histroy tree that we can go back to and make further changes. git log can also give prev history\n",
         "\n",
-        "3) commits will have descriptions about changes/added features and other items. One can also go furthen in the descriptors\n",
+        "3) commits will have descriptions about changes/added features and other items. One can also go further in the description taking about futer changes and also add co colabroators\n",
         "\n",
-        "4) using meraging we can have a people working on different parts of the projects and then coomit their changes to the global code and in this case the global change will be added"
+        "4) using meraging we can have a people working on different parts of the projects and then coomit their changes to the global code and in this case the global change will be added "
       ]
     },
     {
@@ -174,6 +184,21 @@
         "<font size=+3>&#9998;</font>\n",
         "\n",
         "1) STRANGER DANGER MODE: we can have them commit to a fork and after verifiting that this works we can have them create a merge request.\n",
+        "\n",
+        "2) \n",
+        "\n",
+        "*   `touch paper_draft.txt`\n",
+        "*   `vim paper_draft.txt`\n",
+        "*   `git pull`\n",
+        "*   `git add .`\n",
+        "*   `git commit -m \"first commit added new file`\n",
+        "*   `git push`\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
         "\n"
       ]
     },
@@ -217,7 +242,11 @@
         "id": "Lr1LmKb9aSdm"
       },
       "source": [
-        "<font size=+3>&#9998;</font> Put your responses here."
+        "<font size=+3>&#9998;</font> \n",
+        "\n",
+        "1) Since I had some prev commits i had to use git pull to ensure that the remote and local are synced.  always use git pull first before pushing\n",
+        "\n",
+        "2) It worked well. It made sence to work on the main when working with a bigger group of people it might make sense to work in branches"
       ]
     },
     {
@@ -651,7 +680,8 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3.8.9 64-bit",
