--- a/HW1_S23_STUDENT.ipynb
+++ b/HW1_S23_STUDENT.ipynb
@@ -285,7 +285,10 @@
       },
       "source": [
         "<font size=+3>&#9998;</font> Write your debugging process here.\n",
-        "\n"
+        "\n",
+        "I would start by having them run the code and try to understand what their expected output was and what the actual output they expected. If there is a an error then there often is a message i would start by asking them to descibe what the error says. Often googling also help.\n",
+        "\n",
+        "Programing is like cooking with like the instructions. Only now we have the opportunity of going back in time and changeing theing quickly"
       ]
     },
     {
