--- a/hw-02/HW_02_PandasAndObjects_STUDENT.ipynb
+++ b/hw-02/HW_02_PandasAndObjects_STUDENT.ipynb
@@ -93,7 +93,14 @@
       "metadata": {
         "id": "b2153390-6686-464b-83e4-6c97d4115138"
       },
-      "source": []
+      "source": [
+        "`git clone https://github.com/amantham20/CMSE202-s23-turnin.git`\n",
+        "\n",
+        "\n",
+        "-\n",
+        "\n",
+        "`hw-02\\`"
+      ]
     },
     {
       "cell_type": "markdown",
