--- a/hw-02/HW_02_PandasAndObjects_STUDENT.ipynb
+++ b/hw-02/HW_02_PandasAndObjects_STUDENT.ipynb
@@ -1283,7 +1283,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "id": "a2fd9251-92e6-4746-9d3f-0f4573e5ee72",
       "metadata": {
         "id": "a2fd9251-92e6-4746-9d3f-0f4573e5ee72"
@@ -1373,14 +1373,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "id": "43484736",
       "metadata": {
         "id": "43484736"
       },
       "outputs": [],
       "source": [
-        "#Write your code for constructing an example zoo here"
+        "#Write your code for constructing an example zoo here\n",
+        "\n",
+        "temp_zoo = Zoo(\"Central Park Zoo\")\n",
+        "\n",
+        "Alex = Animal('lion', 'grassland' )\n",
+        "Marty = Animal('zebra', 'grassland')\n",
+        "Private = Animal('penguin', 'aquatic')\n",
+        "temp_zoo.add_animal(Alex)\n",
+        "temp_zoo.add_animal(Marty)\n",
+        "temp_zoo.add_animal(Private)"
       ]
     },
     {
@@ -1408,14 +1417,98 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "id": "05391492",
       "metadata": {
         "id": "05391492"
       },
       "outputs": [],
       "source": [
-        "#Write out your new Zoo class here"
+        "#Write out your new Zoo class here\n",
+        "\n",
+        "#Example class to build off of\n",
+        "\n",
+        "class Zoo:\n",
+        "    \"\"\"\n",
+        "        Class for Zoo object.\n",
+        "    \"\"\"\n",
+        "    def __init__(self, name):\n",
+        "        \"\"\" Initialize the Animal object.\n",
+        "        Inputs are\n",
+        "        name: name of the zoo (string)\n",
+        "        animals: collection (dictionary) of animal objects\n",
+        "        \"\"\"\n",
+        "        self.name = name\n",
+        "        self.animals = {}\n",
+        "\n",
+        "        self.Req_area = {}\n",
+        "\n",
+        "    def add_animal(self, animal):\n",
+        "        \"\"\" Adds an animal to the zoo. \"\"\"\n",
+        "        # we use animal's name as a key in the dictionary\n",
+        "        kind = animal.get_kind()\n",
+        "        self.animals[kind] = animal\n",
+        "\n",
+        "    def add(self, animal):\n",
+        "        \"\"\" Shorter name of function to add animals to the Zoo. \"\"\"\n",
+        "        self.add_animal(animal)\n",
+        "\n",
+        "    def get_animals(self):\n",
+        "        \"\"\" Return all animals in the zoo.\"\"\"\n",
+        "        return self.animals\n",
+        "\n",
+        "    def remove(self, name):\n",
+        "        \"\"\" Remove animal from the Zoo for given name. If the name does not exist, error is printed. \"\"\"\n",
+        "        if name in self.animals:\n",
+        "            # yes, animal with given name is in the Zoo\n",
+        "            del self.animals[name]\n",
+        "        else:\n",
+        "            print(\"Animal with given name is not in\", self.name, \"Zoo.\")\n",
+        "\n",
+        "    def get_animal_kinds(self, sort=False):\n",
+        "        \"\"\" Return animal kinds in the Zoo. Return sorted kinds if parameters sorted==True\"\"\"\n",
+        "        kinds = []\n",
+        "        \n",
+        "        for key in self.animals.keys():\n",
+        "            # get animal kinds and store them into list\n",
+        "            kinds.append(self.animals[key].get_kind())\n",
+        "\n",
+        "        if sort == True:\n",
+        "            # we have to return sorted kinds; so sort the kinds\n",
+        "            kinds = sorted(kinds)\n",
+        "\n",
+        "        return kinds\n",
+        "\n",
+        "    def get_total_required_area(self):\n",
+        "        \n",
+        "        self.Req_area = {}\n",
+        "\n",
+        "        for animal_temp in self.animals.values():\n",
+        "            hab = animal_temp.get_habitat()\n",
+        "            self.Req_area[hab] = self.Req_area.get(hab, 0) + animal_temp.get_required_area()\n",
+        "\n",
+        "\n",
+        "        return self.Req_area\n",
+        "\n",
+        "    def print_total_req_area(self):\n",
+        "        temp = self.get_total_required_area()\n",
+        "\n",
+        "        for key, val in temp.items():\n",
+        "            print(key, \": \", val)\n",
+        "\n",
+        "    def number_animals(self):\n",
+        "        \"\"\" Return number of animals in the Zoo.\"\"\"\n",
+        "        return len(self.animals)\n",
+        "\n",
+        "    def total_area(self):\n",
+        "        \"\"\" Return the total Zoo area to host all animals defined in the object. \"\"\"\n",
+        "        area = 0\n",
+        "\n",
+        "        for key in self.animals:\n",
+        "            # get area for all animals in the zoo\n",
+        "            area += self.animals[key].get_required_area()\n",
+        "\n",
+        "        return area\n"
       ]
     },
     {
@@ -1432,14 +1525,38 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "id": "9d3b477f",
       "metadata": {
-        "id": "9d3b477f"
+        "id": "9d3b477f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "70f6a6c9-3501-45f9-ce5b-3679cae970aa"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "grassland :  60\n",
+            "aquatic :  10\n"
+          ]
+        }
+      ],
       "source": [
-        "#Write your code for testing the Zoo class here"
+        "#Write your code for testing the Zoo class here\n",
+        "\n",
+        "temp_zoo = Zoo(\"Central Park Zoo\")\n",
+        "\n",
+        "Alex = Animal('lion', 'grassland' )\n",
+        "Marty = Animal('zebra', 'grassland')\n",
+        "Private = Animal('penguin', 'aquatic')\n",
+        "temp_zoo.add_animal(Alex)\n",
+        "temp_zoo.add_animal(Marty)\n",
+        "temp_zoo.add_animal(Private)\n",
+        "\n",
+        "temp_zoo.print_total_req_area()"
       ]
     },
     {
