--- a/hw-02/HW_02_PandasAndObjects_STUDENT.ipynb
+++ b/hw-02/HW_02_PandasAndObjects_STUDENT.ipynb
@@ -1525,14 +1525,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 31,
       "id": "9d3b477f",
       "metadata": {
         "id": "9d3b477f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "70f6a6c9-3501-45f9-ce5b-3679cae970aa"
+        "outputId": "094a08f5-faa6-400b-a8e0-b4ac3a4b869d"
       },
       "outputs": [
         {
@@ -1540,7 +1540,11 @@
           "name": "stdout",
           "text": [
             "grassland :  60\n",
-            "aquatic :  10\n"
+            "aquatic :  10\n",
+            "\n",
+            "grassland :  60\n",
+            "aquatic :  10\n",
+            "aviary :  20\n"
           ]
         }
       ],
@@ -1556,7 +1560,11 @@
         "temp_zoo.add_animal(Marty)\n",
         "temp_zoo.add_animal(Private)\n",
         "\n",
-        "temp_zoo.print_total_req_area()"
+        "temp_zoo.print_total_req_area()\n",
+        "print()\n",
+        "Dode = Animal('bird', 'aviary')\n",
+        "temp_zoo.add_animal(Dode)\n",
+        "temp_zoo.print_total_req_area()\n"
       ]
     },
     {
@@ -1601,19 +1609,41 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 32,
       "id": "230b55cc",
       "metadata": {
-        "id": "230b55cc"
+        "id": "230b55cc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b074c196-3ec0-4f41-ca17-4522bd137ab8"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "girl needs to go to the grassland habitat \n",
+            "lion needs to go to the grassland habitat \n",
+            "mongoose needs to go to the grassland habitat \n",
+            "pussycat needs to go to the grassland habitat \n",
+            "cheetah needs to go to the grassland habitat \n"
+          ]
+        }
+      ],
       "source": [
         "#Extend the following code for all habitat types\n",
         "\n",
         "# to limit the output you can write zoo_df.sample(20).iterrows() to give you a sample of 20 animals\n",
-        "for i, animal_row in zoo_df.iterrows():\n",
+        "for i, animal_row in zoo_df.sample(5).iterrows():\n",
         "    if (animal_row.legs > 0) and (animal_row.airborne == 0) and (animal_row.aquatic == 0):\n",
-        "        print(\"{0} needs to go to the grassland habitat \".format(animal_row['animal_name']))"
+        "        print(\"{0} needs to go to the grassland habitat \".format(animal_row['animal_name']))\n",
+        "    elif (animal_row.airborne == 0) and (animal_row.aquatic == 1):\n",
+        "        print(\"{0} needs to go to the aquatic habitat \".format(animal_row['animal_name']))\n",
+        "    elif (animal_row.airborne == 1):\n",
+        "        print(\"{0} needs to go to the arial habitat \".format(animal_row['animal_name']))\n",
+        "    else:\n",
+        "        print(\"{0} needs to go to the unclassified habitat \".format(animal_row['animal_name']))\n"
       ]
     },
     {
@@ -1630,14 +1660,51 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 34,
       "id": "6f199979",
       "metadata": {
-        "id": "6f199979"
+        "id": "6f199979",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "423686ba-6e8c-41e8-a222-12c4eb987507"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "grassland :  1230\n",
+            "aquatic :  300\n",
+            "aviary :  480\n",
+            "unclassified :  150\n"
+          ]
+        }
+      ],
       "source": [
-        "#Write your code for constructing a complete zoo here"
+        "#Write your code for constructing a complete zoo here\n",
+        "\n",
+        "zooooo = Zoo(\"New ZOo\")\n",
+        "\n",
+        "for i, animal_row in zoo_df.iterrows():\n",
+        "    if (animal_row.legs > 0) and (animal_row.airborne == 0) and (animal_row.aquatic == 0):\n",
+        "        # print(\"{0} needs to go to the grassland habitat \".format(animal_row['animal_name']))\n",
+        "        kind = animal_row['animal_name']\n",
+        "        zooooo.add(Animal(kind, 'grassland'))\n",
+        "    elif (animal_row.airborne == 0) and (animal_row.aquatic == 1):\n",
+        "        # print(\"{0} needs to go to the aquatic habitat \".format(animal_row['animal_name']))\n",
+        "        kind = animal_row['animal_name']\n",
+        "        zooooo.add(Animal(kind, 'aquatic'))\n",
+        "    elif (animal_row.airborne == 1):\n",
+        "        # print(\"{0} needs to go to the aviary habitat \".format(animal_row['animal_name']))\n",
+        "        kind = animal_row['animal_name']\n",
+        "        zooooo.add(Animal(kind, 'aviary'))\n",
+        "    else:\n",
+        "        # print(\"{0} needs to go to the unclassified habitat \".format(animal_row['animal_name']))\n",
+        "        kind = animal_row['animal_name']\n",
+        "        zooooo.add(Animal(kind, 'unclassified', 30))\n",
+        "\n",
+        "zooooo.print_total_req_area()\n"
       ]
     },
     {
@@ -1654,14 +1721,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 35,
       "id": "47a8495f",
       "metadata": {
-        "id": "47a8495f"
+        "id": "47a8495f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3c187406-b95d-4660-e074-9c7c8a0b6d81"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "grassland :  1230\n",
+            "aquatic :  300\n",
+            "aviary :  480\n",
+            "unclassified :  150\n"
+          ]
+        }
+      ],
       "source": [
-        "#Write your code for showing off your zoo object"
+        "#Write your code for showing off your zoo object\n",
+        "zooooo.print_total_req_area()"
       ]
     },
     {
