--- a/hw-04/HW_4_Regression_and_SVM_STUDENT.ipynb
+++ b/hw-04/HW_4_Regression_and_SVM_STUDENT.ipynb
@@ -1549,11 +1549,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 32 candidates, totalling 160 fits\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv=5, estimator=SVC(), n_jobs=-1,\n",
+       "             param_grid={'C': [0.01, 0.1, 1.0, 10.0],\n",
+       "                         'gamma': [0.01, 0.1, 1.0, 10.0],\n",
+       "                         'kernel': ['linear', 'rbf']},\n",
+       "             verbose=1)"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Write your code here"
+    "#Write your code here\n",
+    "param_grid = {\n",
+    "    'C': [0.01, 0.1, 1.0, 10.0],\n",
+    "    'gamma': [0.01, 0.1, 1.0, 10.0],\n",
+    "    'kernel': ['linear', 'rbf']\n",
+    "}\n",
+    "svm = SVC()\n",
+    "gridSearch = GridSearchCV(svm, param_grid, n_jobs=-1, cv=5, verbose=1)\n",
+    "gridSearch.fit(train_data, train_labels)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'C': 0.01, 'gamma': 0.01, 'kernel': 'linear'}"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gridSearch.best_params_"
    ]
   },
   {
@@ -1561,7 +1612,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Write down your best fir hyper-parameters here.*"
+    "here are the details for the best fit {'C': 0.01, 'gamma': 0.01, 'kernel': 'linear'}"
    ]
   },
   {
@@ -1577,11 +1628,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[398,  25],\n",
+       "       [ 76, 112]])"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Write your code here"
+    "#Write your code here\n",
+    "best = gridSearch.best_estimator_\n",
+    "\n",
+    "predictedSvm = best.predict(test_data)\n",
+    "\n",
+    "matrixSvm = confusion_matrix(test_labels, predictedSvm)\n",
+    "matrixSvm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8346972176759411"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(matrixSvm[0][0] + matrixSvm[1][1]) / sum(sum(matrixSvm))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.84      0.94      0.89       423\n",
+      "           1       0.82      0.60      0.69       188\n",
+      "\n",
+      "    accuracy                           0.83       611\n",
+      "   macro avg       0.83      0.77      0.79       611\n",
+      "weighted avg       0.83      0.83      0.83       611\n",
+      "\n",
+      "Precision:  0.8175182481751825\n",
+      "Recall:  0.5957446808510638\n",
+      "Accuracy:  0.8346972176759411\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(classification_report(test_labels, predictedSvm))\n",
+    "print('Precision: ', precision_score(test_labels, predictedSvm))\n",
+    "print('Recall: ', recall_score(test_labels, predictedSvm))\n",
+    "print('Accuracy: ', accuracy_score(test_labels, predictedSvm))"
    ]
   },
   {
